Added parsing for the basic elements of the status object.

--- a/test/TpLinkSharp.UnitTests/TpLinkSharp.UnitTests.csproj
+++ b/test/TpLinkSharp.UnitTests/TpLinkSharp.UnitTests.csproj
@@ -17,4 +17,10 @@
     <ProjectReference Include="..\..\src\TpLinkSharp\TpLinkSharp.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="TestAssets\StatusRpmResponse.html">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
