--- a/test/TpLinkSharp.UnitTests/TpLinkSharp.UnitTests.csproj
+++ b/test/TpLinkSharp.UnitTests/TpLinkSharp.UnitTests.csproj
@@ -21,6 +21,9 @@
     <None Update="TestAssets\StatusRpmResponse.html">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="TestAssets\SystemStatisticRpm.html">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
